# quake-experiments

./: .gitignore  .gitmodules  README.md
minimal-quake2-base/: .gitignore  README.md  build.py  game-c-loc.txt
minimal-quake2-base/base/: autoexec.cfg  default.cfg
minimal-quake2-base/base/maps/: test1.bsp  test1.map  test1.prt  test1.texinfo.json
minimal-quake2-base/base/textures/test/: skip.aseprite  test-blue.aseprite  test-green.aseprite  test-red.aseprite
minimal-quake2-base/game-c/: Makefile  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c
minimal-quake2-base/game-c/header/: game.h  local.h  menu.h  shared.h
minimal-quake2-base/game-c/menu/: menu.c
minimal-quake2-base/game-c/monster/: move.c
minimal-quake2-base/game-c/player/: client.c  hud.c  minimal.c  trail.c  view.c  weapon.c
minimal-quake2-base/game-c/shared/: shared.c
minimal-quake2-base/game-odin/: client.odin  consts.odin  exposed.odin  globals.odin  main.odin  types.odin  utils.odin  view.odin
minimal-quake2-base/trenchbroom-config/: GameConfig.cfg  MinimalQuake2Base.fgd
pak-adventure/: .gitignore  CMakeLists.txt  README.md  build_macos_app.sh  index.html  main.cpp  platform.cpp  platform.h  shell.html  web_main.cpp
pak-finder/: pak_finder.cpp  pak_finder.h
pak-finder/macos/PakFinder/: ContentView.swift  PakFinderApp.swift
pak-finder/macos/PakFinder.xcodeproj/: project.pbxproj
pak-finder/macos/PakFinder.xcodeproj/project.xcworkspace/xcuserdata/jack.xcuserdatad/: UserInterfaceState.xcuserstate
pak-finder/macos/PakFinder.xcodeproj/xcuserdata/jack.xcuserdatad/xcschemes/: xcschememanagement.plist
